<resources>
    <string name="app_name">Todo</string>
    <string name="action_settings">Settings</string>
    <string name="todo_title">Enter todo title</string>
    <string name="todo_desc">Description</string>
    <string name="set_date">Set date</string>
    <string name="set_remainder">Set Remainder</string>
    <string name="sample_text">Sample text</string>
    <string name="time_text">Time will remind the task!</string>
    <string name="date_text">Date will help generate reports!</string>

    <string name="btn_save">Save</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="btn_edit">Edit</string>
    <string name="empty_message">No todos to show, Add some!</string>
</resources>
