<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_12">

    <EditText
        android:id="@+id/todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackish_yellow_25"
        android:textStyle="italic"
        android:padding="@dimen/padding_10"
        android:hint="@string/todo_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"/>

    <EditText
        android:id="@+id/todo_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackish_yellow_25"
        android:textStyle="italic"
        android:padding="@dimen/padding_10"
        android:hint="@string/todo_desc"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"/>

    <Button
        android:id="@+id/todo_set_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackish_yellow_25"
        android:textStyle="italic"
        android:padding="@dimen/padding_10"
        android:hint="@string/set_date"
        android:gravity="left"
        android:textColor="@color/white"
        android:editable="false"
        android:textSize="@dimen/text_size_18"/>

    <Button
        android:id="@+id/todo_set_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blackish_yellow_25"
        android:textStyle="italic"
        android:padding="@dimen/padding_10"
        android:hint="@string/set_remainder"
        android:textColor="@color/white"
        android:editable="false"
        android:textSize="@dimen/text_size_18"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_25"
        android:background="@color/blackish_yellow_25"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        android:text="@string/btn_dismiss"
        />
</LinearLayout>
